--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "19.1.0",
     "react-player": "^3.3.1",
     "react-scrollama": "^2.4.2",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.6.1",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
